<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PartyPooper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_header">Party Pooper</string>
    <string name="login_text">Loading...</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_startup">StartupActivity</string>

</resources>
